--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <dd>18</dd><!--description definition-->
           <dt>城市</dt>
           <dd>池州</dd>
+          <dt>手机</dt>
+          <dd>136XXXXXXXX</dd>
           <dt>邮箱</dt>
           <dd>2979337714@qq.com</dd>
         </dl>
@@ -95,8 +97,10 @@
         <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载PDF简历</a>
       </p>
       <p class="introduce">
-        方应杭， 资深前端工程师，资深前端讲师，现在在 饥人谷 教前端课程。<br>
-        技能：前端开发，Rails 开发，Node.js 开发
+        Blake， 前端工程师，现在在饥人谷教前端课程。<br>
+        熟悉JavaScript编程，熟练掌握ES6新特性，了解ES7部分新特性
+        对JavaScript 函数式编程和JavaScript面向对象编程有一定理解
+        熟练掌握React、Vue等前端框架
       </p>
     </main>
     <section class="skills">
