--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="siteWelcome" class="site-welcome active">
         <div class="loading"></div>
     </div>
-    <div class="topNavBar">
+    <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <!--clearfix可以解决float所造成的已知的bug-->
             <a class="logo" href="#" alt="logo" style="float:left;">
@@ -47,13 +47,37 @@
             </a>
             <nav style="float:right;">
                 <ul class="clearfix">
-                    <li><a href="#">关于</a></li>
-                    <li><a href="#">技能</a></li>
-                    <li><a href="#">作品</a></li>
-                    <li><a href="#">博客</a></li>
-                    <li><a href="#">日历</a></li>
-                    <li><a href="#">联系方式</a></li>
-                    <li><a href="#">其他</a></li>
+                    <li class="menuTriggle">
+                        <a href="#siteAbout">关于</a>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#siteSkills">技能</a>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#siteWorks">作品</a>
+                        <ul class="submenu">
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#">博客</a>
+                        <ul class="submenu">
+                            <li>博客1</li>
+                            <li>博客2</li>
+                            <li>博客3</li>
+                        </ul>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#">日历</a>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#">联系方式</a>
+                    </li>
+                    <li class="menuTriggle">
+                        <a href="#">其他</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -62,7 +86,7 @@
         <div class="mask"></div>
     </div>
     <main>
-        <div class="userCard">
+        <div id="siteAbout" class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./picture/avatar.jpg" alt="头像" />
@@ -132,7 +156,7 @@
             Blake， 前端工程师，现在在饥人谷教前端课程。<br> 熟悉JavaScript编程，熟练掌握ES6新特性，了解ES7部分新特性 对JavaScript 函数式编程和JavaScript面向对象编程有一定理解 熟练掌握React、Vue等前端框架
         </p>
     </main>
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -184,7 +208,7 @@
                 </div>
         </ol>
     </section>
-    <section class="portfolio">
+    <section id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix;">
@@ -221,7 +245,71 @@
     </section>
 
     <script>
-        siteWelcome.classList.remove('active')
+        setTimeout(function() {
+            siteWelcome.classList.remove('active') //使用延迟
+        }, 1000);
+        setTimeout
+        window.onscroll = function() {
+                if (window.scrollY) {
+                    topNavBar.classList.add('sticky')
+                } else {
+                    topNavBar.classList.remove('sticky')
+                }
+            }
+            /*此时通过判断是否有menuTriggle来判断是否有菜单栏，但是此时造成
+            没有此class的li标签active不能触发，所以为了避免bug，我在各li标签
+            上都加上menuTriggle*/
+            /*
+            let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+            也可以在nav上声明class menu,一旦有a标签就可以触发active
+            */
+        let liTags = document.getElementsByClassName('menuTriggle')
+        console.log(liTags)
+        for (let i = 0; i < liTags.length; i++) {
+            liTags[i].onmouseenter = function(x) {
+                //此时取得正在监听的标签，若是x.target则是取得正在操作的标签，注意两者区别
+                x.currentTarget.classList.add('active')
+                    /*
+                    let brother = a.nextSibling
+                        //nodeType，判断当前是什么类型
+                    while (brother.tagName !== 'UL') {
+                        brother = brother.nextSibling
+                    }
+                    console.log(brother)
+                    */
+
+            }
+            liTags[i].onmouseleave = function(x) {
+                x.currentTarget.classList.remove('active')
+                    /*
+                    let brother = a.nextSibling
+                    while (brother.tagName !== 'UL') {
+                        brother = brother.nextSibling
+                    }
+                    console.log('mouseleave')
+                    */
+
+
+            }
+        }
+        let aTags = document.querySelectorAll('div.topNavBar-inner >nav >ul >li >a')
+        console.log(aTags)
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onclick = function(x) {
+                //重要语句,阻止a标签默认动作
+                x.preventDefault()
+                    //console.log('you clicked')
+                    //console.log(x.target)
+                let a = x.currentTarget
+                    //用户写什么就是什么，不做任何修改
+                let href = a.getAttribute('href')
+                    //console.log(a.href)所得值是被浏览器修改过的url
+                let element = document.querySelector(href)
+                    //debugger  断点，debug
+                let top = element.offsetTop //取得距离
+                window.scrollTo(0, top - 75)
+            }
+        }
     </script>
 </body>
 
