--- a/index.html
+++ b/index.html
@@ -271,6 +271,17 @@
         </div>
 
     </section>
+    <section class="message" id="message">
+        <h2>留言</h2>
+        <ol id="messageList"></ol>
+        <form id="postMessageForm">
+            <label for="">User</label>
+            <input type="text" name="user">
+            <label for="">Content</label>
+            <input type="text" name="content">
+            <input type="submit" value="submit">
+        </form>
+    </section>
 
 
 
@@ -421,6 +432,9 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
     <script src="./slides.js"></script>
+    <!-- 存储服务 -->
+    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.13.0/dist/av-min.js"></script>
+    <script src="./message.js"></script>
 </body>
 
 </html>
